--- a/src/content/blog/mi-tercer-post.mdx
+++ b/src/content/blog/mi-tercer-post.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Mi tercer post"
+title: "Building a magical AI-powered semantic search from scratch"
 subtitle: "Esto es el subtitulo"
 description: "Tercer post..."
 pubDate: "2023-03-21"
