Creado estilos del blog

--- a/src/content/blog/mi-cuarto-post.mdx
+++ b/src/content/blog/mi-cuarto-post.mdx
@@ -3,4 +3,8 @@ title: "Painting with Math: A Gentle Study of Raymarching"
 description: "Lorem ipsum dolor sit amet"
 pubDate: "2023-02-01"
 mainImg: 'image.png'
+tags:
+  - post
+  - tag2
+  - tag3
 ---
