--- a/src/content/blog/mi-quinto-post.mdx
+++ b/src/content/blog/mi-quinto-post.mdx
@@ -3,6 +3,8 @@ title: 'A Deep Dive Into SVG Path Commands'
 description: "The mystical d attribute in SVG paths is actually a series of small commands. In this guide, we'll take a look at each path command and how we can use them to draw icons."
 pubDate: "2023-09-24"
 mainImg: "img-test.webp"
+tags:
+  - post
 ---
 
 # A Deep Dive Into SVG Path Commands
