--- a/src/content/blog/mi-segundo-post.mdx
+++ b/src/content/blog/mi-segundo-post.mdx
@@ -4,6 +4,8 @@ subtitle: 'Esto es el subtitulo'
 description: 'Segundo post...'
 pubDate: '2023-02-01'
 mainImg: '/assets/blog/img-test.webp'
+tags:
+  - post
 ---
 
 import Katex from "../../components/Katex.astro"
