--- a/src/content/blog/mi-tercer-post.mdx
+++ b/src/content/blog/mi-tercer-post.mdx
@@ -4,6 +4,8 @@ subtitle: "Esto es el subtitulo"
 description: "Tercer post..."
 pubDate: "2023-03-21"
 mainImg: "/assets/blog/img-test.webp"
+tags:
+  - post
 ---
 
 ## Tituto h2
