--- a/src/content/blog/mi-segundo-post.mdx
+++ b/src/content/blog/mi-segundo-post.mdx
@@ -3,7 +3,6 @@ title: 'Beautiful and mind-bending effects with WebGL Render Targets'
 subtitle: 'Esto es el subtitulo'
 description: 'Segundo post...'
 pubDate: '2023-02-01'
-mainImg: '/assets/blog/img-test.webp'
 tags:
   - post
 ---
@@ -12,4 +11,4 @@ import Katex from "../../components/Katex.astro"
 
 ## Tituto h2
 
-<Katex q="2+2=4" />
+<Katex f="2+2=4" />
