añadido sección de proyectos en about

--- a/src/content/blog/mi-primer-post.mdx
+++ b/src/content/blog/mi-primer-post.mdx
@@ -1,14 +1,14 @@
 ---
-title: 'Refraction, dispersion, and other shader light effects'
+title: "Refraction, dispersion, and other shader light effects"
 description: "Since my very first lines of React Three Fiber and shader code, I've been obsessed with light and how to reproduce some of its physical properties to add some delight to my 3D scenes ✨."
-pubDate: '2023-06-06'
-mainImg: 'img-test.webp'
+pubDate: "2023-06-06"
+mainImg: "img-test.webp"
 tags:
   - post
 ---
 
-import Katex from '../../components/Katex.astro'
-import Quote from '../../components/ui/Quote.astro'
+import Katex from "../../components/Katex.astro"
+import Quote from "../../components/ui/Quote.astro"
 
 <Quote
   quote="Hay algo fascinante en la ciencia: con una mínima inversión en hechos se obtienen grandes rendimientos en conjeturas."
@@ -26,10 +26,10 @@ import Quote from '../../components/ui/Quote.astro'
 
 En mi proceso de documentación, me he topado con una gran dificultad a la hora de encontrar una cronología del Big Bang estándar. En la mayoría de mis fuentes no hay fechas, periodos y datos claramente establecidos, además de haber numerosas contradicciones. Esto en parte es normal, debido a que el principio del universo sigue siendo algo en debate y en el que todavía falta mucho por conocer y aclarar. Por ejemplo, no se sabe qué ocasionó la superioridad de la materia sobre la antimateria en esta etapa primigenia, ni tampoco se sabe en qué momento aparece la materia oscura.
 
-He intentado escribir siendo conciso y claro, pero tampoco me he podido permitir aclarar o desarrollar cada tema lo deseado pues sino este texto me llevaría demasiado tiempo. En ningún momento hablo de la materia oscura, el inflatón o el bosón de Higgs, y no me extiendo mucho en la antimateria, la simetría, los neutrinos, las teorías de la relatividad, etc. Aunque estos temas sean sumamente interesantes, también son complejos y su desarrollo completo llevaría muchas líneas —aunque
-puede que en un futuro escriba sobre la teoría de la relatividad especial.
+He intentado escribir siendo conciso y claro, pero tampoco me he podido permitir aclarar o desarrollar cada tema lo deseado pues sino este texto me llevaría demasiado tiempo. En ningún momento hablo de la materia oscura, el inflatón o el bosón de Higgs, y no me extiendo mucho en la antimateria, la simetría, los neutrinos, las teorías de la relatividad, etc. Aunque estos temas sean sumamente interesantes, también son complejos y su desarrollo completo llevaría muchas líneas <span class="aside">aunque
+puede que en un futuro escriba sobre la teoría de la relatividad especial</span>.
 
-Por último, he de decir que orignalmente tenía pensado hablar desde principio del universo —el Big Bang— hasta la formación de nuestro sistema solar, hablar un poco de nuestro Sol y acabar con su muerte, la formación de enanas blancas y los agujeros negros. Por desgracia o por fortuna, la cronología del Big Bang es muy extensa, más de lo que esperaba. Por tanto, decidí dividir esto en dos partes: la primera —la que está leyendo— sobre el principio del universo y la segunda —la
+Por último, he de decir que orignalmente tenía pensado hablar desde principio del universo —el Big Bang— hasta la formación de nuestro sistema solar, hablar un poco de nuestro Sol y acabar con su muerte, la formación de enanas blancas y los agujeros negros. Por desgracia o por fortuna, la cronología del Big Bang es muy extensa, más de lo que esperaba. Por tanto, decidí dividir esto en dos partes: la primera <span class="aside close">la que está leyendo</span> sobre el principio del universo y la segunda —la
 que saldrá en la próxima revista— sobre su final.
 
 Por lo pronto, lo único que espero de este texto es que sea mínimamente interesante e instructivo.
