--- a/src/content/blog/el-universo.mdx
+++ b/src/content/blog/el-universo.mdx
@@ -1,6 +1,6 @@
 ---
-title: El Universo
-description: "Desde las partículas hasta los agujeros negros"
+title: "El Universo: Desde las partículas hasta los agujeros negros"
+description: "Un viaje desde el Big Bang hasta la formación de las estrellas y galaxias pasando por el surgimiento de las partículas y el desarrollo de la Gran Explosión."
 pubDate: "2023-10-22"
 mainImg: "img-test.webp"
 tags:
