--- a/src/content/blog/el-universo.mdx
+++ b/src/content/blog/el-universo.mdx
@@ -1,7 +1,7 @@
 ---
 title: "El Universo: Desde las partículas hasta los agujeros negros"
 description: "Un viaje desde el Big Bang hasta la formación de las estrellas y galaxias pasando por el surgimiento de las partículas y el desarrollo de la Gran Explosión."
-pubDate: "2023-10-22"
+pubDate: "2023-03-06"
 mainImg: "img-test.webp"
 tags:
   - física
@@ -12,6 +12,7 @@ tags:
 
 import Katex from "../../components/Katex.astro"
 import Quote from "../../components/ui/Quote.astro"
+import Figure from "../../components/ui/Figure.astro"
 
 <Quote
   quote="Hay algo fascinante en la ciencia: con una mínima inversión en hechos se obtienen grandes rendimientos en conjeturas."
@@ -28,31 +29,31 @@ import Quote from "../../components/ui/Quote.astro"
 </div>
 
 En mi proceso de documentación, me he topado con una gran dificultad a la hora de
-encontrar una cronología del Big Bang estándar. En la mayoría de mis fuentes no
+encontrar una cronología del _Big Bang_ estándar. En la mayoría de mis fuentes no
 hay fechas, periodos y datos claramente establecidos, además de haber numerosas
 contradicciones. Esto en parte es normal, debido a que el principio del universo
 sigue siendo algo en debate y en el que todavía falta mucho por conocer y aclarar.
-Por ejemplo, no se sabe qué ocasionó la superioridad de la materia sobre la antimateria
-en esta etapa primigenia, ni tampoco se sabe en qué momento aparece la materia oscura.
+Por ejemplo: no se sabe qué ocasionó la superioridad de la materia sobre la antimateria
+en esta etapa primigenia, ni tampoco se sabe en qué momento aparece por primera vez
+la materia oscura.
 
 He intentado escribir siendo conciso y claro, pero tampoco me he podido permitir
 aclarar o desarrollar cada tema lo deseado pues sino este texto me llevaría demasiado
 tiempo. En ningún momento hablo de la materia oscura, el inflatón o el bosón de Higgs,
 y no me extiendo mucho en la antimateria, la simetría, los neutrinos, las teorías de
 la relatividad, etc. Aunque estos temas sean sumamente interesantes, también son complejos
-y su desarrollo completo llevaría muchas líneas <span class="aside">aunque puede que
-en un futuro escriba sobre la teoría de la relatividad especial</span>.
+y su desarrollo completo llevaría muchas líneas. Pero no descarto la posibilidad de que
+en un futuro escriba sobre la teoría de la relatividad especial.
 
-Por último, he de decir que orignalmente tenía pensado hablar desde principio del
-universo —el Big Bang— hasta la formación de nuestro sistema solar, hablar un poco
+Por último, he de decir que originalmente tenía pensado hablar desde principio del
+universo hasta la formación de nuestro sistema solar, hablar un poco
 de nuestro Sol y acabar con su muerte, la formación de enanas blancas y los agujeros
 negros. Por desgracia o por fortuna, la cronología del Big Bang es muy extensa, más
-de lo que esperaba. Por tanto, decidí dividir esto en dos partes: la primera
+de lo que esperaba. Por tanto, pensé en dividir esto en dos partes: la primera sobre el
+principio del universo y la segunda sobre su final.
 
-<span class="aside close">la que está leyendo</span> sobre el principio del universo
-y la segunda —la que saldrá en la próxima revista— sobre su final.
-
-Por lo pronto, lo único que espero de este texto es que sea mínimamente interesante e instructivo.
+Por lo pronto, lo único que espero de este texto es que sea mínimamente interesante e
+instructivo.
 
 ## Parte 1: El Big Bang
 
@@ -66,167 +67,147 @@ Por lo pronto, lo único que espero de este texto es que sea mínimamente intere
 ### La Época de Planck
 
 El universo se encuentra concentrado en una región de longitud <Katex f='10^{-35}' />
-metros —<Katex f='10^{25}' /> veces más pequeño que un átomo— y a una temperatura
-de <Katex f='10^{32}' /> kelvin —<Katex f='10^{29}' /> veces la temperatura de nuestro
-Sol. Esta es la frontera donde el concepto de tiempo tiene sentido, un momento
-donde el universo está en perfecta simetría, la relatividad general y el modelo
-estándar son incompatibles y las leyes físicas no se cumplen[^1]. Las cuatro fuerzas
-fundamentales —la fuerza electromagnética, la fuerza nuclear fuerte, la fuerza
-nuclear débil y la fuerza gravitatoria— se encuentran unificadas, todas en una
-única fuerza fundamental o «fuerza madre», aunque no por mucho.
+metros (<Katex f='10^{25}' /> veces más pequeño que un átomo) y a una temperatura
+de <Katex f='10^{32}' /> kelvin (<Katex f='10^{29}' /> veces la temperatura de nuestro
+Sol). Aquí está la frontera donde el concepto de _tiempo_ tiene sentido, un momento
+donde el universo está en perfecta simetría, la relatividad general y el _modelo
+estándar_ son incompatibles y las leyes físicas no se cumplen[^1]. Las cuatro fuerzas
+fundamentales <span class="aside">la **fuerza electromagnética**, la **fuerza nuclear fuerte**, la **fuerza
+nuclear débil** y la **fuerza gravitatoria**</span> se encuentran unificadas, todas en una
+única **fuerza fundamental** o «fuerza madre», pero no por mucho.
 
 ### La Época de la Gran Unificación
 
 La época de Planck ha terminado y se da una transición de fase[^2], esta comprende
 desde los <Katex f='10^{-43}' /> hasta los <Katex f='10^{-36}' /> primeros segundos
-del universo que ahora se encuetra a una temperatura de <Katex f='10^{27}' /> kelvin.
+del universo, que ahora se encuetra a una temperatura de <Katex f='10^{27}' /> kelvin.
 
 En estos momentos el universo ha comenzado su proceso de expansión y se ha enfriado
-lo suficiente como para que la fuerza gravitatoria se separe de las otras fuerzas
-fundamentales —ahora formando una única fuerza llamada fuerza electrofuerte—, esto
-supone la primera de las rupturas de la simetría, que a su vez conllevará la aparición
-de las primeras partículas fundamentales (véase el [Apéndice](#apéndice)).
+lo suficiente para perimitir que la fuerza gravitatoria se separe de las otras fuerzas
+fundamentales <span class="aside">ahora formando una única fuerza llamada **fuerza
+electrofuerte**</span>, esto supone la primera de las rupturas de la simetría, que a su vez conllevará la aparición de las primeras partículas fundamentales
+(véase el [Apéndice](#apéndice)).
 
 ### La Época Inflacionaria
 
-Entre los <Katex f='10^{-36}' /> y los <Katex f='10^{-32}' /> segundos, a una temperatura de <Katex f='10^{22}' /> kelvin, el universo se ha enfriado lo suficiente como para que la fuerza nuclear fuerte se separe de las otras dos —que ahora forman una única fuerza llamada fuerza electrodébil[^3]. Esta separación provocó una ruptura de la simetría que supuso una muy rápida e inmensa liberación de energía[^4]. Esta liberación de energía provocó la «inflación cósmica», proceso por el cual el universo se expandió de manera exponencial en un factor de <Katex f='10^{26}' /> en menos de una fracción de segundo. Se pasó de un universo más pequeño que un protón a uno del tamaño aproximado de una uva[^5], un universo donde todavía no existía la materia y donde solo habían fuerzas y, por tanto, bosones —gluones y, si existen, gravitones.
+Entre los <Katex f='10^{-36}' /> y los <Katex f='10^{-32}' /> segundos, a una temperatura de <Katex f='10^{22}' /> kelvin, el universo se ha enfriado lo suficiente como para que la fuerza nuclear fuerte se separe de las otras dos —que ahora forman una única fuerza llamada **fuerza electrodébil**[^3]. Esta separación provocó una ruptura de la simetría que supuso una muy rápida e inmensa liberación de energía[^4]. Esta liberación de energía provocó la «inflación cósmica», proceso por el cual el universo se expandió de manera exponencial en un factor de <Katex f='10^{26}' /> en menos de una fracción de segundo. Se pasó de un universo más pequeño que un protón a uno del tamaño aproximado de una uva[^5]. Un universo donde todavía no existía la materia y donde solo habían fuerzas: bosones, gluones y, si existen, gravitones.
 
 ### La Época Electrodébil
 
 Esta época se superpone ligeramente con la época inflacionaria pues comprende desde los primeros <Katex f='10^{-36}' /> hasta los <Katex f='10^{-12}' /> segundos desde el principio del universo, a una temperatura de <Katex f='10^{15}' /> kelvin, y es el principio del universo tal y como los conocemos hoy día al ser la transición de fase asociada a la separación de todas la fuerzas fundamentales.
 
-El universo se ha enfriado lo suficiente como para que la fuerza débil y la fuerza electromagnética se separen, provocando otra ruptura de la simetría, y formándose así los bosones W y Z —que suponen la primera aparición de masa en el universo—, y los fotones, estos últimos sin masa[^6].
+El universo se ha enfriado lo suficiente como para que la fuerza débil y la fuerza electromagnética se separen, provocando otra ruptura de la simetría, y formándose así los **bosones W y Z** <span class="aside">que suponen la primera aparición de masa en el universo</span> y los **fotones**, que no tienen masa[^6].
+
+### La Época del Quark
+
+Acaba la época electrodébil y da comienzo la época del **quark**, que comprende desde los <Katex f='10^{-12}' /> hasta los <Katex f='10^{-5}' /> primeros segundos del universo, que ahora se encuentra a una temperatura de <Katex f='10^{12}' /> kelvin y tiene unos <Katex f='10^{12}' /> metros de diámetro.
+
+La energía que se liberó en la época anterior se ha transformado y empieza a diambular en forma de un plasma de partículas y antipartículas[^7]. Esta mezcla supercaliente y densa <span class="aside">3.8 mil millones de veces la densidad del agua (Weinberg, 2016)</span> está compuesta principalmente de quarks y gluones libres <span class="aside">conocida también como «sopa de quarks»</span> y se distribuye uniformemente por todo el universo. La existencia de los quarks y los gluones supondría la existencia de protones y neutrones, pero la energía de este plasma es mayor que la energía necesaria para romper estas partículas que, tan pronto se forman, se destruyen.
 
 ### La Época del Hadrón
 
-Entre los <Katex f='10^{-5}' /> primeros segundos y el primer segundo, a una temperatura de <Katex f='10^{10}' /> kelvin, el plasma del universo se ha enfriado lo suficiente como para que se empiecen a formar los primeros hadrones y leptones.
+Entre los <Katex f='10^{-5}' /> primeros segundos y el primer segundo, a una temperatura de <Katex f='10^{10}' /> kelvin, el plasma del universo se ha enfriado lo suficiente como para que se empiecen a formar los primeros **hadrones** y **leptones**.
 
-Se crearán unos siete protones por neutrón[^8], pero los neutrones libres son inestables y se
-descomponen en protones más estables; aunque no son los únicos: los mesones tambien son muy
-inestables y se desintegran en dos nuevas partículas: un neutrino muónico y un antimuón[^9] —este
-último, al contrario que el neutrino, es muy inestable.
+Se crearán unos siete protones por neutrón[^8], pero los neutrones libres son inestables y se descomponen en protones más estables; aunque no son los únicos. Los **mesones** tambien son muy
+inestables y se desintegran en dos nuevas partículas: un _neutrino muónico_ y un _antimuón_[^9] <span class="aside">este último, al contrario que el neutrino, es muy inestable</span>.
 
-A esta temperatura, los fotones de rayos gamma[^10] pueden reaccionar entre sí y formar dos
-partículas: electrones y positrones —antielectrones— en partes iguales.
+A esta temperatura, los _fotones de rayos gamma_[^10] pueden reaccionar entre sí y formar dos
+partículas: electrones y positrones (aka antielectrones) en partes iguales.
 
-Los quarks y los antiquarks se aniquilan mutuamente, pero un suceso provocó que esta
+Los quarks y los antiquarks se aniquilan mutuamente, pero un suceso desconocido provocó que esta
 aniquilación entre los quarks y antiquarks acabara con un excedente de quarks. La materia se habre
 paso sobre la antimateria.
 
 ### La Época Leptónica
 
-Esta época abarca desde el primer segundo de vida del universo, a una temperatura de <Katex f='10^{9}' />
-kelvin y unas mil veces el tamaño de nuestro sistema solar, hasta los diez primeros segundos.
+Esta época abarca desde el primer segundo de vida del universo, a una temperatura de <Katex f='10^{9}' /> kelvin y unas mil veces el tamaño de nuestro sistema solar, hasta los diez primeros segundos.
 
 La aniquilación entre los hadrones y los antihadrones ha dejado unos cuantos hadrones
 diambulando por ahí, además de leptones, antileptones y fotones.
 
 Los leptones y antileptones se van aniquilando unos a otros y liberando fotones de rayos
-gamma, es decir: <Katex f='e^- + e^+ \leftrightarrow \gamma' />, donde <Katex f='e^-' /> es un electrón, <Katex f='e^+' /> un positrón y <Katex f='\gamma' /> es un fotón de rayos
-gamma. Pero un suceso provocó que haya un excedente de electrones sobre positrones. Además, el
-resto de leptones —muones y taus— son tan inestables que se descomponen acabando en un
-estado de energía mucho más bajo, en electrones.
+gamma, es decir: <Katex inline={false} f='e^- + e^+ \leftrightarrow \gamma' />, donde <Katex f='e^-' /> es un electrón, <Katex f='e^+' /> un positrón y <Katex f='\gamma' /> es un fotón de rayos
+gamma. Pero otro suceso desconocido provocó que haya un excedente de electrones sobre positrones. Además, el resto de leptones <span class="aside">muones y taus</span> son tan inestables que se descomponen acabando en un estado de energía mucho más bajo, en electrones.
 
 Los protones empezaban a atraer neutrones, pero los fotones de rayos gamma impedían que
 estos formaran núcleos.
 
 ### La Nucleosíntesis
 
-Entre los diez primeros segundos y los veinte primeros minutos, el plasma del universo
-desciende su temperatura hasta los <Katex f='10^{7}' /> kelvin, lo suficiente como para que se empiezen a formar
+Entre los diez primeros segundos y los veinte primeros minutos, el plasma del universo desciende su temperatura hasta los <Katex f='10^{7}' /> kelvin, lo suficiente como para que se empiezen a formar
 los primeros «núcleos complejos».
-Los protones —o <Katex f='^1\mathrm{H}' />— y neutrones se combinan a través de la fusión nuclear [^11] para formar, en
-primer lugar, deuterio —isótopo de hidrógeno con un protón y un neutrón, <Katex f='^2\mathrm{H}' />—, liberando a su
-vez un positron y un neutrino; después el deuterio se fusionará con un protón para formar helio-3
-—dos protones y un neutrón, <Katex f='^3\mathrm{He}' />
-—, liberando otro fotón de rayos gamma; y por último, dos
-helio-3 se fusionarán para formar helio-4 —dos protones y dos neutrones, <Katex f='^4\mathrm{He}' />
-—, liberando dos
-protones (figura 4, [Apéndice](#apéndice)). Este proceso de fusión nuclear, es el mismo proceso que ocurre en
-el núcleo de nuestro Sol.
-En esta época, no solo los isótopos de hidrógeno y helio aparecen, tambień se forman isótopos
-de litio y berilio, pero en mucha menor cantidad.
+
+Los protones (<Katex f='^1\mathrm{H}' />) y neutrones se combinan a través de la fusión nuclear [^11] para formar, en primer lugar, _deuterio_ <span class="aside">isótopo de hidrógeno con un protón y un neutrón, <Katex f='^2\mathrm{H}' /></span>, liberando a su vez un positrón y un neutrino; después el deuterio se fusionará con un protón para formar _helio-3_ <span class="aside">dos protones y un neutrón, <Katex f='^3\mathrm{He}' /></span>, liberando otro fotón de rayos gamma; y por último, dos helio-3 se fusionarán para formar _helio-4_ <span class="aside">dos protones y dos neutrones, <Katex f='^4\mathrm{He}' /></span>, liberando dos protones (figura 4, [Apéndice](#apéndice)). Este proceso de fusión nuclear, es el mismo proceso que ocurre en el núcleo de nuestro Sol.
+
+En esta época, no solo los isótopos de hidrógeno y helio aparecen, también se van formando isótopos
+de _litio_ y _berilio_, pero en mucha menor cantidad.
 
 ### La Era Fotónica
 
 La era fotónica se superpone ligeramente con la era de la nucleosíntesis, porque se encuentra
-entre los diez primeros segundos y los primeros 379000
-años del universo, a una temperatura de 4000
-kelvin. Durante este periodo los fotones dominarán la energía del universo.
+entre los diez primeros segundos y los primeros 37900 años del universo, a una temperatura de 4000 kelvin. Durante este periodo los fotones dominarán la energía del universo.
 
 El universo en estos momentos es un plasma hirviente de nucleos atómicos, electrones y
 fotones. Los fotones en este periodo estarán interactuando constantemente con los electrones. Esta
 constante interacción provocó que el universo fuese completamente opaco, porque los fotones no
-podían fluir libremente. En el caso del hidrógeno, la interacción con los fotones sería tal que así: <Katex f='\mathrm{H} + \gamma \leftrightarrow p + e^{-}' />
+podían fluir libremente. En el caso del hidrógeno, la interacción con los fotones sería tal que así: <Katex inline={false} f='\mathrm{H} + \gamma \leftrightarrow p + e^{-}' />
 , donde <Katex f='\mathrm{H}' /> es un átomo de hidrógeno.
 
 ### La Recombinación
 
-[^12] Esta nueva etapa abarca desde los 18000
-hasta los 37900
-primeros años del universo, a una
-temperatura de 3000
-kelvin y con un radio de 42 millones de años luz.
-Durante esta etapa, el plasma que cubriá todo el universo se fue enfriando lo suficiente como
+[^12] Esta nueva etapa abarca desde los 18000 hasta los 379000 primeros años del universo, a una temperatura de 3000 kelvin y con un radio de 42 millones de años luz.
+
+Durante esta etapa, el plasma que cubria todo el universo se fue enfriando lo suficiente como
 para que la fusión nuclear dejase de ser posible y se dejaran de formar núcleos complejos,
 empezando así a formarse los primeros átomos neutros.
-A los 379000
-años, el plasma se enfrió lo suficiente como para que los electrones dejasen de
-interactuar con los fotones de rayos gamma de manera definitiva, luego estos empezaron a poder
+
+A los 379000 años, el plasma se enfrió lo suficiente como para que los electrones dejasen de
+interactuar con los fotones de rayos gamma de manera definitiva, así estos empezaron a poder
 fluir libremente por el univeso.
+
 En esta etapa el universo se volvió transparente por la liberación de fotones de rayos gamma.
 Conforme fueron transcurriendo los milenios, estos fotones superenergéticos y con muy poca
 longitud de onda, empezaron “enfriarse” y perder energía. Hoy día podemos detectar estos fotones
-y observar como fue el universo en esta etapa primigenia; es lo que se conoce como la radiación
-del fondo cósmico de microondas [^13] (figura 5, [Apéndice](#apéndice)).
+y observar como fue el universo en esta etapa primigenia, que es lo que se conoce como la **radiación
+del fondo cósmico de microondas** [^13] (figura 5, [Apéndice](#apéndice)).
+
 Esta etapa acaba con la formación de los primeros átomos de hidrógeno y helio, que acabarán
 llenando el universo de una niebla de aproximadamente 75% <Katex f='\mathrm{H}' />
 y 25% <Katex f='\mathrm{He}' />.
 
 ### La Edad Oscura
 
-Entre los 379000
-y los primeros 150
-millones de años de vida del universo, a una temperatura
-de 60
-kelvin, este se vuelve complemamente oscuro para el ojo humano pues, conforme la
+Entre los 379000 y los primeros 150 millones de años de vida del universo, a una temperatura
+de 60 kelvin, este se vuelve complemamente oscuro para el ojo humano pues, conforme la
 temperatura disminuyó y el universo se expandió, la radiación cósmica cambió a infrarrojo.
+
 El universo se llenó de una nube de gas casi uniforme compuesta principalmente de átomos de
 hidrógeno. Poco a poco y con el pasar del tiempo, estos átomos comenzarían a atraerse formando
-las primeras moléculas, <Katex f='\mathrm{H}_2' />
-; estas a su vez empezarán a formar enormes bosques de gas de
-hidrógeno y helio, aunque estos se acabarían fragmentando en inmensas nubes de entre cien mil y
-un millón de veces la masa del Sol y podían llegar a tener un diámetro de entre 30
-y 100
-años luz
-(Whitehouse, 2006).
+las primeras moléculas, <Katex f='\mathrm{H}_2' />. Estas a su vez empezarán a formar enormes bosques de gas de hidrógeno y helio, aunque estos se acabarían fragmentando en inmensas nubes de entre cien mil y un millón de veces la masa del Sol, pudiendo llegar a tener un diámetro de entre 30
+y 100 años luz (Whitehouse, 2006).
 
 ### La Era de las Estrellas
 
-Da comienzo la era de las estrellas —comprendida entre los primeros 150
-millones de años del
-universo hasta nuestros días.
+Da comienzo la era de las estrellas, comprendida entre los primeros 150
+millones de años del universo hasta nuestros días.
+
 En algún momento una niebla de gas de hidrógeno comenzará colapsar bajo la fuerza de la
 gravedad: rotará, se calentará lo suficiente como para fusionar hidrógeno en helio y brillará; un
 brillo unas diecisiete veces mayor que el de nuestro Sol.
-Estas primeras estrellas se conocen como estrellas de Población III. Las estrellas de Población
-III son extremadamente brillantes y calientes, además de ser supermasivas —unas cientos de veces la masa de nuestro Sol—; por esto último es que agotan rápidamente su combustible —el
-hidrógeno— y explotan en supernovas. Pero antes de que una estrella de Población III muera, en
-su núcleo se produjo un proceso llamado nucleosíntesis estelar, que ocasionó la aparición de los
-metales pesados; todos estos nuevos elementos formarían parte de la siguiente generación de
+
+Estas primeras estrellas se conocen como _estrellas de Población III_. Las estrellas de Población
+III son extremadamente brillantes y calientes, además de ser supermasivas <span class="aside">unas cientos de veces la masa de nuestro Sol</span>; por esto último es que agotan rápidamente su combustible y explotan en supernovas. Pero antes de que una estrella de Población III muera, en
+su núcleo se produjo un proceso llamado _nucleosíntesis estelar_, que ocasionó la aparición de los
+primeros metales pesados; todos estos nuevos elementos formarían parte de la siguiente generación de
 estrellas, las estrellas de Población II.
 
 Las primeras galaxias se piensa que aparecieron alrededor de los primeros mil millones de años
 después del Big Bang. Estas protogalaxias serían cúmulos enormes de gases de hidrógeno y helio
 donde, conforme el universo se iba enfriando, se irían formando espacios más densos que otros
 que después formarían las primeras estrellas. Pero en este estapa hay más que estrellas y galaxias.
+
 Las estrellas supermasivas, al morir, explotan en supernovas y se convierten en una estrella de
-neutrones o en un agujero negro —un espacio en el universo en el que la fuerza gravitatoria es tan
-brutal que ni siquiera la luz puede escapar de él. Los agujeros negros fueron durante muchos años
-vistos como una curiosidad consecuencia de la relatividad general, no se creía que algo así podría
-existir en la realidad. Hoy día hemos sido capaces de fotografiar a dos agujeros negros: <span class="text-textColor-primary">M87*</span> y <span class="text-textColor-primary">
-Sagitarius A*</span>, este último se encuentra en el centro de nuestra galaxia y es más de cien mil
-millones de veces más masivo que la Tierra. Pero eso y más lo reservo para otra ocasión.
+neutrones o en un agujero negro <span class="aside">un espacio en el universo en el que la fuerza gravitatoria es tan brutal que ni siquiera la luz puede escapar de él</span>. Los agujeros negros fueron durante muchos años vistos como una curiosidad consecuencia de la relatividad general, no se creía que algo así podría existir en la realidad. Hoy día hemos sido capaces de fotografiar a dos agujeros negros: <span class="text-textColor-primary">M87*</span> y <span class="text-textColor-primary">Sagitarius A*</span>, este último se encuentra en el centro de nuestra galaxia y es más de cien mil millones de veces más masivo que la Tierra.
 
 ## Apéndice
 
@@ -253,12 +234,52 @@ los **gluones** con la _fuerza nuclear fuerte_ —la que mantiene unidos a los q
 protones y los neutrones—, los **fotones** con la _fuerza electromagnética_ y el hipotético **gravitón**
 con la _fuerza gravitatoria_.
 
+<Figure
+  img="el-universo/esquema-particulas-fundamentales.png"
+  foot="Figura 1: Esquema de algunas partículas fundamentales"
+/>
+<Figure
+  img="el-universo/esquema-masa-carga-grupo-extranesa-particulas-fundamentales.png"
+  foot="Figura 2: Esquema indicando la masa, carga, grupo y extrañesa de las partículas fundamentales"
+/>
+<Figure
+  img="el-universo/espectro-electromagnetico.png"
+  foot="Figura 3: Imagen del espectro electromagnético, sus longitudes de onda, la escala aproximada de estas, su frecuencia, su temperatura y si penetran la atmósfera"
+/>
+<Figure
+  img="el-universo/proceso-fusion-hidrogeno.png"
+  foot="Figura 4: Imagen del proceso de fusión del hidrógeno"
+/>
+<Figure
+  img="el-universo/radiacion-del-fondo-cosmico-de-microondas.png"
+  foot="Figura 5: Fotografía de la radiación del fondo cósmico de microondas"
+/>
+
+## Referencias
+
+1. Feynman, R. P., Leighton, R. B., Sands, M. (1987). _Feynman. Física. Volumen I: Mecánica,
+   radiación y calor_. Addison-Wesley Iberoamericana, S. A.
+
+2. Gale, M. (1 de febrero de 2020). _Our Universe_. Scientific Explorer. http://sciexplorer.blogspot.com/search/label/Our%20Universe
+
+3. Gribbin, J. (1997). _Diccionario del Cosmos_. Crítica, S. A.
+
+4. Hogan, C. J. (2005). _El libro del Big Bang_. Alianza Editorial, S. A.
+
+5. Jepsen, T. (s.f.). _The First Second of The Universe_. http://ffden-2.phys.uaf.edu/webproj/211_fall_2016/Trevor_Jepsen/trevor_jepsen/title_page.html
+
+6. Peris, J. A. (1987). _Diccionario de física_. Editorial Alhambra, S. A.
+
+7. Weinberg, S. (2016). _Los primeros minutos del universo_. Alianza Editorial, S. A.
+
+8. Whitehouse, D. (2006). _El Sol: Una biografía_. Kailas Editorial, S. L.
+
 [^1]: El tiempo, la temperatura y la longitud anteriormente mencionadas son algunas de las unidades de Planck. Estos valores fueron calculadas por, sorpresa sorpresa, Max Planck, que los derivó combinando las constantes fundamentales de la física y representan la medida teórica más pequeña (longitud y tiempo) o más grande (temperatura) posible (http://sciexplorer.blogspot.com/2011/01/big-bang.html). Esto significa que todo lo anterior al tiempo de Planck es una _singularidad_ —un lugar donde las leyes de la física no son válidas (Gribbin, 1997).
 [^2]: Una transición de fase es un cambio entre dos estados (Gribbin, 1997).
 [^3]: En 1979, Abdus Salam, Sheldom Glashow y Steven Weinbeg (el escritor de _Los tres primeros minutos del universo_), ganaron el Premio Nobel por ayudar a proporcionar evidencia directa de que la fuerza nuclear débil y la fuerza electromagnética se combinan en una única fuerza —la fuerza electrodébil— a energías superiores a unos <Katex f='10^{14}' /> kelvin (http://sciexplorer.blogspot.com/search/label/Our%20Universe).
 [^4]: Cuando la fuerza gravitatoria se separó de las otras fuerzas también hubo una liberación de energía, pero esta no fue tan brutal como la de la fuerza nuclear fuerte (aka fuerza fuerte). Para que os hagáis idea; la fuerza fuerte es 100 veces más fuerte que la electromagnética, unas <Katex f='10^{12}' /> veces más fuerte que la fuerza débil y unas <Katex f='10^{38}' /> veces más fuerte que la gravedad (http://sciexplorer.blogspot.com/2011/01/our-universe-part-5-inflationary-epoch.html) (Gribbin, 1997). Otra forma de imaginarse la cantidad de enegía liberada por la segregación de la fuerza fuerte es recordar que la fisión nuclear —el proceso por el cual se «rompen» los núcleos atómicos (los protones y neutrones se mantienen unidos en el núcleo atómico por la fuerza fuerte)— es el principio por el cual funcionan las bombas nucleares.
 [^5]: Este proceso explica por qué el universo actualmente es tan «plano»; el universo fue aplanado por la inflación (Gribbin, 1997).
-[^6]: Cuando se hace referencia a la masa de una partícula, habría que aclarar que es cuando la partícula está en reposo. Que una partícula no tenga masa significa que siempre está en movimiento; en este caso, el fotón se mueve con velocidad constante a unos <Katex f='3\times 10^{8}' /> metros por segundo (Feynman et al., 1987).
+[^6]: Cuando se hace referencia a la masa de una partícula, habría que aclarar que es cuando la partícula está en reposo. Que una partícula no tenga masa significa que siempre está en movimiento; en este caso, el fotón se mueve con velocidad constante a unos <Katex f='3\times 10^{8}' /> metros por segundo (Feynman et al., 1987). En retrospectiva, la masa es la propiedad física que se opone al movimiento y, al ser los fotones las partículas que se mueven a la velocidad teórica máxima, estos no tiene oposición al movimiento, luego no tienen masa.
 [^7]:
     En 1933, Paul Dirac recibió el Premio Nobel por predecir la existencia de una partícula de igual masa y energía que el
     electrón, pero de carga opuesta; es decir, un antielectrón. Una amplia gama de leyes físicas parecen ser simétricas, esto
@@ -287,6 +308,13 @@ con la _fuerza gravitatoria_.
     y <Katex f='10^{21}' />
     Hz; es decir, los rayos gamma son unas diez mil veces más energéticos que
     la luz visible —por esta misma razón a estos fotones también se les conoce como _fotones de alta energía_.
+
+[^11]:
+    Al igual que la fisión nuclear libera energía por la segregación de nucleos atómicos, la fusión nuclear libera energía
+    por la fusión de núcleos atómicos; esto se debe a que la masa del núcleo resultante es menor a la suma de las masas de
+    los núcleos que lo forman, lo que quiere decir que la masa que falta se ha liberado en forma de energía. Hoy día esto
+    es especialmente interesante pues, aunque el desarrollo de reactores de fusión nuclear lleva ya unas décadas, la
+    energía producida por estos reactores todavía no ha superado a la energía necesaria para producirla.
 
 [^12]: También conocida como _Desacoplamiento_.
 [^13]:
