Nueva seta: Poder cambiar de fuente

--- a/src/content/blog/el-universo.mdx
+++ b/src/content/blog/el-universo.mdx
@@ -96,7 +96,7 @@ Entre los <Katex f='10^{-36}' /> y los <Katex f='10^{-32}' /> segundos, a una te
 
 ### La Época Electrodébil
 
-Esta época se superpone ligeramente con la época inflacionaria pues comprende desde los primeros <Katex f='10^{-36}' /> hasta los <Katex f='10^{-12}' /> segundos desde el principio del universo, a una temperatura de <Katex f='10^{15}' /> kelvin, y es el principio del universo tal y como los conocemos hoy día al ser la transición de fase asociada a la separación de todas la fuerzas fundamentales.
+Esta época se superpone ligeramente con la época inflacionaria pues comprende desde los primeros <Katex f='10^{-36}' /> hasta los <Katex f='10^{-12}' /> segundos desde el principio del universo, a una temperatura de <Katex f='10^{15}' /> kelvin, y es el principio del universo tal y como lo conocemos hoy día al ser la transición de fase asociada a la separación de todas la fuerzas fundamentales.
 
 El universo se ha enfriado lo suficiente como para que la fuerza débil y la fuerza electromagnética se separen, provocando otra ruptura de la simetría, y formándose así los **bosones W y Z** <span class="aside">que suponen la primera aparición de masa en el universo</span> y los **fotones**, que no tienen masa[^6].
 
@@ -213,9 +213,9 @@ neutrones o en un agujero negro <span class="aside">un espacio en el universo en
 
 ## Apéndice
 
-Las _partículas elementales_ (figura 1) son los constituyentes básicos a partir de los cuales se
+Las _partículas fundamentales_ (figura 1) son los constituyentes básicos a partir de los cuales se
 forman todas las cosas materiales; o, lo que es lo mismo, son las partículas que no pueden ser
-descompuestas en partes constituyentes (Gribbin, 1997). Existen dos partículas elementales en la
+descompuestas en partes constituyentes (Gribbin, 1997). Existen dos partículas fundamentales en la
 naturaleza: los **fermiones** y los **bosones**.
 Los fermiones están caracterizados por tener un número de espín fraccionario y, por tanto,
 cumplir el _principio de exclusión de Pauli_. Además, los fermiones están clasificados en **quarks**:
