--- a/src/content/blog/introduccion-al-desarrollo-de-videojuegos-con-pico8.mdx
+++ b/src/content/blog/introduccion-al-desarrollo-de-videojuegos-con-pico8.mdx
@@ -525,7 +525,7 @@ circfill(ballx, bally, ballsize, 15)
 
 La función `circfill` es como la función `rectfill`, solo que hay que pasarle por parámetros la posición del centro del círculo <span class="aside">`ballx` y `bally`</span>, su tamaño <span class="aside">`ballsize`</span> y su color <span class="aside">`15`</span>.
 
-### 3. Una pelota estática es una pelota aburrida
+### 3.3 Una pelota estática es una pelota aburrida
 
 Para que la pelota se mueva, escriba una nueva función debajo de `movepaddle`:
 
@@ -730,7 +730,7 @@ function _update()
 end
 ```
 
-### 4. Final
+## 4. Final
 
 Con todo, el código debería quedar tal que así:
 
