TOC y compartir blog

--- a/src/content/blog/el-universo.mdx
+++ b/src/content/blog/el-universo.mdx
@@ -2,6 +2,7 @@
 title: "El Universo: Desde las partículas hasta los agujeros negros"
 description: "Un viaje desde el Big Bang hasta la formación de las estrellas y galaxias pasando por el surgimiento de las partículas y el desarrollo de la Gran Explosión."
 pubDate: "2023-03-06"
+update: "2023-11-25"
 mainImg: "img-test.webp"
 tags:
   - física
@@ -210,6 +211,8 @@ que después formarían las primeras estrellas. Pero en este estapa hay más que
 
 Las estrellas supermasivas, al morir, explotan en supernovas y se convierten en una estrella de
 neutrones o en un agujero negro <span class="aside">un espacio en el universo en el que la fuerza gravitatoria es tan brutal que ni siquiera la luz puede escapar de él</span>. Los agujeros negros fueron durante muchos años vistos como una curiosidad consecuencia de la relatividad general, no se creía que algo así podría existir en la realidad. Hoy día hemos sido capaces de fotografiar a dos agujeros negros: <span class="text-textColor-primary">M87*</span> y <span class="text-textColor-primary">Sagitarius A*</span>, este último se encuentra en el centro de nuestra galaxia y es más de cien mil millones de veces más masivo que la Tierra.
+
+- - -
 
 ## Apéndice
 
