--- a/src/content/blog/introduccion-al-desarrollo-de-videojuegos-con-pico8.mdx
+++ b/src/content/blog/introduccion-al-desarrollo-de-videojuegos-con-pico8.mdx
@@ -2,6 +2,7 @@
 title: "Introducción al Desarrollo de Videojuegos con PICO-8"
 description: "Introducción a la programación con Lua creando un sencillo videojuego con PICO-8 Education Edition"
 pubDate: "2023-03-06"
+update: "2023-11-25"
 tags:
   - gamedev
   - lua
@@ -842,6 +843,6 @@ mismo archivo lo arrastra hasta la PICO-8 se le cargará el juego.
 
 ## Referencias
 
-1. White, J. (s.f.). PICO-8 User Manual. https://www.lexaloffle.com/dl/docs/pico-8_manual.html
+1. White, J. (s.f.). _PICO-8 User Manual_. https://www.lexaloffle.com/dl/docs/pico-8_manual.html
 
-2. De Bock, A. (agosto de 2015). PICO-8 Zine \#1. https://sectordub.itch.io/pico-8-fanzine-1
+2. De Bock, A. (agosto de 2015). _PICO-8 Zine_ \#1. https://sectordub.itch.io/pico-8-fanzine-1
