--- a/src/content/blog/las-matematicas-como-ciencia.mdx
+++ b/src/content/blog/las-matematicas-como-ciencia.mdx
@@ -2,6 +2,7 @@
 title: "Las matemáticas no son una ciencia"
 description: "Definiendo el método científico, la ciencia y las matemáticas para desmentir la creencia de que estas son una ciencia."
 pubDate: "2023-03-23"
+update: "2023-11-20"
 tags:
   - matemáticas
   - ciencia
