cambios en los posts

--- a/src/content/blog/el-principio-del-universo.mdx
+++ b/src/content/blog/el-principio-del-universo.mdx
@@ -1,6 +1,6 @@
 ---
-title: "El Universo: Desde las partículas hasta los agujeros negros"
-description: "Un viaje desde el Big Bang hasta la formación de las estrellas y galaxias pasando por el surgimiento de las partículas y el desarrollo de la Gran Explosión."
+title: "El Principio del Universo: Desde las partículas hasta las primeras estrellas"
+description: "Un artículo sobre la cronología del Big Bang, desde la época de Planck hasta la era de las estrellas pasando por las segregaciones de las fuerzas fundamentales, la inflación cósmica y la aparición de los elementos pesados."
 pubDate: "2023-03-06"
 update: "2023-11-25"
 mainImg: "img-test.webp"
@@ -9,6 +9,16 @@ tags:
   - divulgación
   - big bang
   - cosmología
+previus:
+  {
+    "link": "introduccion-al-desarrollo-de-videojuegos-con-pico8",
+    "text": "Introducción al Desarrollo de Videojuegos con PICO-8",
+  }
+next:
+  {
+    "link": "las-matematicas-no-son-una-ciencia",
+    "text": "Las matemáticas no son una ciencia",
+  }
 ---
 
 import Katex from "../../components/Katex.astro"
@@ -56,7 +66,7 @@ principio del universo y la segunda sobre su final.
 Por lo pronto, lo único que espero de este texto es que sea mínimamente interesante e
 instructivo.
 
-- - -
+---
 
 ## Parte 1: El Big Bang
 
@@ -212,7 +222,7 @@ que después formarían las primeras estrellas. Pero en este estapa hay más que
 Las estrellas supermasivas, al morir, explotan en supernovas y se convierten en una estrella de
 neutrones o en un agujero negro <span class="aside">un espacio en el universo en el que la fuerza gravitatoria es tan brutal que ni siquiera la luz puede escapar de él</span>. Los agujeros negros fueron durante muchos años vistos como una curiosidad consecuencia de la relatividad general, no se creía que algo así podría existir en la realidad. Hoy día hemos sido capaces de fotografiar a dos agujeros negros: <span class="text-textColor-primary">M87*</span> y <span class="text-textColor-primary">Sagitarius A*</span>, este último se encuentra en el centro de nuestra galaxia y es más de cien mil millones de veces más masivo que la Tierra.
 
-- - -
+---
 
 ## Apéndice
 
