--- a/src/content/blog/introduccion-al-desarrollo-de-videojuegos-con-pico8.mdx
+++ b/src/content/blog/introduccion-al-desarrollo-de-videojuegos-con-pico8.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Introducción al Desarrollo de Videojuegos con PICO-8"
-description: "Introducción a la programación con Lua creando un sencillo videojuego con PICO-8 Education Edition"
+description: "Introducción a la programación con Lua creando un sencillo videojuego con PICO-8 Education Edition."
 pubDate: "2023-03-06"
 update: "2023-11-25"
 tags:
@@ -8,6 +8,11 @@ tags:
   - lua
   - pico 8
   - programación
+next:
+  {
+    "link": "el-principio-del-universo",
+    "text": "El Principio del Universo: Desde las partículas hasta las primeras estrellas",
+  }
 ---
 
 import Katex from "../../components/Katex.astro"
