--- a/src/content/blog/las-matematicas-no-son-una-ciencia.mdx
+++ b/src/content/blog/las-matematicas-no-son-una-ciencia.mdx
@@ -8,6 +8,11 @@ tags:
   - ciencia
   - método científico
   - monólogo
+previus:
+  {
+    "link": "el-principio-del-universo",
+    "text": "El Principio del Universo: Desde las partículas hasta las primeras estrellas",
+  }
 ---
 
 import Katex from "../../components/Katex.astro"
@@ -61,7 +66,7 @@ que las palabras, les damos un significado por sus ejemplos concretos. Aunque po
 forma <Katex f="Ax + By + C = 0" /> siempre grafique una recta.
 
 ¿Pero si los matemáticos descubren cosas al igual que los científicos, no son las matemáticas una ciencia? No, porque un científico no puede saber por completo si su teoría, aunque concuerde con las observaciones, sea correcta. Newton consideraba que su ley de gravitación universal era correcta, pero
-Einstein demostró con su teoría de la relatividad general que la teoría de Newton era solo “una muy buena aproximación” de la realidad en ciertos casos. Por el contrario, todas y cada una de las más de cuatrocientas proposiciones que demuestra Euclides en los trece libros de su *magnum opus*, los *Elementos*, en su tiempo fueron verdaderos y lo seguirán siendo para el resto de los siglos.
+Einstein demostró con su teoría de la relatividad general que la teoría de Newton era solo “una muy buena aproximación” de la realidad en ciertos casos. Por el contrario, todas y cada una de las más de cuatrocientas proposiciones que demuestra Euclides en los trece libros de su _magnum opus_, los _Elementos_, en su tiempo fueron verdaderos y lo seguirán siendo para el resto de los siglos.
 
 ¿Cómo sabe un matemático que una teorema es verdadero? ¿Porque lo ha comprobado para muchos números? ¿Porque lo dice otro matemático? ¿Porque lo dice Dios? No. Un teorema es verdadero porque es una deducción directa del conjunto de axiomas de las matemáticas, es decir, porque se ha demostrado. Haber comprobado una conjetura —la conjetura para las matemáticas es lo que la hipótesis es para las ciencias— para una cantidad inmensa de números no es otra cosa que un juego o una forma de dar una pista sobre su veracidad. La conjetura de Golbach se ha comprobado para <Katex f="4 \cdot 10^{18}" /> números, pero sigue sin estar demostrada. ¿Pero para tal cantidad de números no puede considerarse demostrada? La expresión
 
@@ -80,4 +85,4 @@ La matemáticas no son una ciencia pues no se basan en el método científico y,
 
 ### 5. Los matemáticos son...
 
-Entonces, si las matemáticas no son una ciencia, ¿qué son? Para mí, las matemáticas son el conjunto de conocimientos de las matemáticas *per se*. Son el estudio de ellas mismas, de sus propias entidades y de sus relaciones. ¿Qué son las matemáticas? No son una ciencia, son matemáticas.
+Entonces, si las matemáticas no son una ciencia, ¿qué son? Para mí, las matemáticas son el conjunto de conocimientos de las matemáticas _per se_. Son el estudio de ellas mismas, de sus propias entidades y de sus relaciones. ¿Qué son las matemáticas? No son una ciencia, son matemáticas.
