--- a/src/content/blog/las-matematicas-no-son-una-ciencia.mdx
+++ b/src/content/blog/las-matematicas-no-son-una-ciencia.mdx
@@ -1,8 +1,8 @@
 ---
-title: "Las matemáticas no son una ciencia"
-description: "Definiendo el método científico, la ciencia y las matemáticas para desmentir la creencia de que estas son una ciencia."
-pubDate: "2023-03-23"
-update: "2023-11-20"
+title: 'Las matemáticas no son una ciencia'
+description: 'Definiendo el método científico, la ciencia y las matemáticas para desmentir la creencia de que estas son una ciencia.'
+pubDate: '2023-03-23'
+update: '2023-11-20'
 tags:
   - matemáticas
   - ciencia
@@ -10,22 +10,29 @@ tags:
   - monólogo
 previus:
   {
-    "link": "el-principio-del-universo",
-    "text": "El Principio del Universo: Desde las partículas hasta las primeras estrellas",
+    'link': 'el-principio-del-universo',
+    'text': 'El Principio del Universo: Desde las partículas hasta las primeras estrellas'
+  }
+next:
+  {
+    'link': 'firefox-developer-edition-para-ubuntu',
+    'text': 'Descargar y configurar Firefox Developer Edition para Ubuntu'
   }
 ---
 
-import Katex from "../../components/Katex.astro"
+import Katex from '../../components/Katex.astro'
 
 ### 1. Los matemáticos y la ciencia de las matemáticas
 
 <div class="apply-book-line">
-  Hay algo que siempre me ha molestado de algunos matemáticos. Tómese por
-  ejemplo Henri Poincaré y Bertrand Russell, sin lugar a dudas grandes
-  matemáticos —en el caso de Poincaré también físico— y filósofos —sobre todo
-  Russell— que no dudaron en afirmar que la matemática es la ciencia más pura y
-  más bella que existe. Yo, ante tales afirmaciones no puedo parar de
-  preguntarme: ¿Qué tienen de científico las matemáticas?
+  Hay algo que siempre me ha molestado de algunos
+  matemáticos. Tómese por ejemplo Henri Poincaré y Bertrand
+  Russell, sin lugar a dudas grandes matemáticos —en el caso
+  de Poincaré también físico— y filósofos —sobre todo
+  Russell— que no dudaron en afirmar que la matemática es la
+  ciencia más pura y más bella que existe. Yo, ante tales
+  afirmaciones no puedo parar de preguntarme: ¿Qué tienen de
+  científico las matemáticas?
 </div>
 
 ¿Las matemáticas son una ciencia? Por supuesto que lo son, lo dice todo el mundo. Lo dicen incluso los propios matemáticos. Pero, ¿por qué son una cienca? ¿Qué hace que la astronomía sea una ciencia y que la astrología sea una payasada que no es más que «sofistería y embustes»? ¿Por qué es más científico interpretar los datos de una triste tabla que ha llevado meses de trabajo a unos pobres _oompa loompas_ del CERN que intentar dar sentido a los fetiches que un autodenominado artista llama performance?
@@ -70,7 +77,10 @@ Einstein demostró con su teoría de la relatividad general que la teoría de Ne
 
 ¿Cómo sabe un matemático que una teorema es verdadero? ¿Porque lo ha comprobado para muchos números? ¿Porque lo dice otro matemático? ¿Porque lo dice Dios? No. Un teorema es verdadero porque es una deducción directa del conjunto de axiomas de las matemáticas, es decir, porque se ha demostrado. Haber comprobado una conjetura —la conjetura para las matemáticas es lo que la hipótesis es para las ciencias— para una cantidad inmensa de números no es otra cosa que un juego o una forma de dar una pista sobre su veracidad. La conjetura de Golbach se ha comprobado para <Katex f="4 \cdot 10^{18}" /> números, pero sigue sin estar demostrada. ¿Pero para tal cantidad de números no puede considerarse demostrada? La expresión
 
-<Katex inline={false} f="MCD(n^{17} + 9, (n + 1)^{17} + 9) = 1" />
+<Katex
+  inline={false}
+  f="MCD(n^{17} + 9, (n + 1)^{17} + 9) = 1"
+/>
 
 se creía verdadera para cualquier <Katex f="n \in N" />, pero se demostró que no lo es para
 
